--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/style.css">  
 </head>
-<body>
+<body class="container">
+	<header class="main-logo col-xs-12 col-lg-12">
+		<div class="logo">
+				<img src="img/main/head.jpg" alt="Логотип Herbarium" width="300px" height="90px">
+		</div>
+	</header>
+	<section class="description">
+		<p><span>необычный сюрприз</span> в стильной упаковке <span>приведет её в восторг</span></p>
+	</section>
 </body>
 </html>
