Верстка первых 3 блоков

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 				<!-- Bootstrap CSS -->
-		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 
 		<title>Herbarium</title>
 		<link href="https://fonts.googleapis.com/css?family=Poiret+One&amp;subset=cyrillic" rel="stylesheet">
@@ -15,13 +15,49 @@
 		<link rel="stylesheet" href="css/style.css">  
 </head>
 <body class="container">
-	<header class="main-logo col-xs-12 col-lg-12">
-		<div class="logo">
-				<img src="img/main/head.jpg" alt="Логотип Herbarium" width="300px" height="90px">
-		</div>
-	</header>
-	<section class="description">
-		<p><span>необычный сюрприз</span> в стильной упаковке <span>приведет её в восторг</span></p>
-	</section>
+
+		<header class="row">
+			<div class="main-logo">
+					<img src="img/main/head.jpg" alt="Логотип Herbarium">
+			</div>
+		</header>
+		<section class="row">
+			<div class="description">
+				<img src="img/main/description.jpg" alt="Описание" class="img-responsive">
+			</div>
+		</section>
+		<section class="row main-offer">
+			<div class="col-sm-4">
+				<div class="action">
+					 В честь 3х летия бренда <br>
+					 Акция действует <br>
+					 <span class="date">до 1 марта</span> 2019г 
+				</div>
+			</div>
+			<div class="col-sm-8">
+				<div class="offer">
+					Полностью готов к вручению за <span class="strike">7 500  </span><span class="price">5 500 р</span>
+				</div>
+			</div>
+		</section>
+		<section class="row products">
+			<div class="col-xs-3 product">
+				<img src="img/preview/icon_1.jpg" alt="Кулон" class="img-responsive">
+				<h3 class="about_product visible-md visible-lg">Необычный <br>кулон</h3>
+			</div>
+			<div class="col-xs-3 product">
+				<img src="img/preview/icon_2.jpg" alt="Цепочка" class="img-responsive">
+				<h3 class="about_product visible-md visible-lg">Длинная <br>цепочка</h3>
+			</div>
+			<div class="col-xs-3 product">
+				<img src="img/preview/icon_3.jpg" alt="Шкатулка" class="img-responsive">
+				<h3 class="about_product visible-md visible-lg">Бархатная <br>шкатулка</h3>
+			</div>
+			<div class="col-xs-3 product">
+				<img src="img/preview/icon_4.jpg" alt="Дизайн" class="img-responsive">
+				<h3 class="about-product visible-md visible-lg">Подарочное <br>оформление</h3>
+			</div>
+		</section>
+
 </body>
 </html>
