--- a/index.html
+++ b/index.html
@@ -58,6 +58,84 @@
 				<h3 class="about-product visible-md visible-lg">Подарочное <br>оформление</h3>
 			</div>
 		</section>
+		<section class="row catalog">
+			<h2>Выбрать кулон</h2>
+			<div class="col-xs-12 col-lg-3 item">
+				<img src="img/flower_1.jpg" alt="Кулон" class="img-responsive">
+				<h3 class="item-product">кулон "Remember Me"</h3>
+			</div>
+			<div class="col-xs-12 col-lg-3 item">
+				<img src="img/flower_2.jpg" alt="Кулон" class="img-responsive">
+				<h3 class="item-product">кулон "Pink Bouguet"</h3>
+			</div>
+			<div class="col-xs-12 col-lg-3 item">
+				<img src="img/flower_3.jpg" alt="Кулон" class="img-responsive">
+				<h3 class="item-product">кулон "Spring Forest"</h3>
+			</div>
+			<div class="col-xs-12 col-lg-3 item">
+				<img src="img/flower_4.jpg" alt="Кулон" class="img-responsive">
+				<h3 class="item-product">кулон "Ringing Forest"</h3>
+			</div>
+		</section>
+		<section class="row catalog">
+			<div class="col-xs-12 col-lg-3 item">
+				<img src="img/flower_5.jpg" alt="Кулон" class="img-responsive">
+				<h3 class="item-product">кулон "Alpus"</h3>
+			</div>
+			<div class="col-xs-12 col-lg-3 item">
+				<img src="img/flower_6.jpg" alt="Кулон" class="img-responsive">
+				<h3 class="item-product">кулон "Cloud"</h3>
+			</div>
+			<div class="col-xs-12 col-lg-3 item">
+				<img src="img/flower_7.jpg" alt="Кулон" class="img-responsive">
+				<h3 class="item-product">кулон "Meadow"</h3>
+			</div>
+			<div class="col-xs-12 col-lg-3 item">
+				<img src="img/flower_8.jpg" alt="Кулон" class="img-responsive">
+				<h3 class="item-product">кулон "Rose"</h3>
+			</div>
+		</section>
+		<section class="row features">
+			<h2>Особенности</h2>
+			<div class="col-xs-6 feature-1">
+				<div class="position">
+					<img src="img/icons/icon_brilliant.png" alt="Иконка бриллианта" class="img-responsive">
+				</div>
+				<div class="position">
+					<h3>Неповторимость</h3>
+					<p>Ручная работа<br> обеспечивает идеальное<br> качество и эксклюзивность<br> каждого изделия</p>
+				</div>
+			</div>
+			<div class="col-xs-6 feature-2">
+				<div class="position">
+					<img src="img/icons/icon_puzzle.png" alt="Иконка паззла" class="img-responsive">
+				</div>
+				<div class="position">
+					<h3>Комбинирование</h3>
+					<p>Украшения Herbarium<br> отлично сочетаются с <br>любыми другими <br>ювелирными изделиями</p>
+				</div>
+			</div>
+		</section>
+		<section class="row features">
+			<div class="col-xs-6 feature-3">
+				<div class="position">
+					<img src="img/icons/icon_tulip.png" alt="Иконка тюльпана" class="img-responsive">
+				</div>
+				<div class="position">
+					<h3>Настоящие растения</h3>
+					<p>Для изготовления<br> украшений мы<br>используем только<br>настоящие растения</p>
+				</div>
+			</div>
+			<div class="col-xs-6 feature-4">
+				<div class="position">
+					<img src="img/icons/icon_leaf.png" alt="Иконка листа" class="img-responsive">
+				</div>
+				<div class="position">
+					<h3>Легкость</h3>
+					<p>Благодаря ювелирной<br>смоле украшения<br>получаются легкими и<br>очень прочными</p>
+				</div>
+			</div>
+		</section>
 
 </body>
 </html>
