--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		<section class="row features">
 			<h2>Особенности</h2>
 			<div class="col-xs-6 feature-1">
-				<div class="position">
+				<div class="img-feature">
 					<img src="img/icons/icon_brilliant.png" alt="Иконка бриллианта" class="img-responsive">
 				</div>
 				<div class="position">
@@ -107,7 +107,7 @@
 				</div>
 			</div>
 			<div class="col-xs-6 feature-2">
-				<div class="position">
+				<div class="img-feature">
 					<img src="img/icons/icon_puzzle.png" alt="Иконка паззла" class="img-responsive">
 				</div>
 				<div class="position">
@@ -118,7 +118,7 @@
 		</section>
 		<section class="row features">
 			<div class="col-xs-6 feature-3">
-				<div class="position">
+				<div class="img-feature">
 					<img src="img/icons/icon_tulip.png" alt="Иконка тюльпана" class="img-responsive">
 				</div>
 				<div class="position">
@@ -127,7 +127,7 @@
 				</div>
 			</div>
 			<div class="col-xs-6 feature-4">
-				<div class="position">
+				<div class="img-feature">
 					<img src="img/icons/icon_leaf.png" alt="Иконка листа" class="img-responsive">
 				</div>
 				<div class="position">
@@ -136,6 +136,62 @@
 				</div>
 			</div>
 		</section>
+		<section class="row decor">
+			<div class="col-xs-6 decoration">
+				<h2>Готовое оформление</h2>
+				<p>Вам больше не нужно ломать голову над<br> упаковкой</p>
+				<p>Мы сэкономили ваше время и<br> предлагаем кулон сразу в подарочной<br> упаковке</p>
+				<p>Стильная бархатная шкатулка<br> в сочетании с изящной атласной лентой<br> придутся по вкусу любой женщине</p>
+				<button class="order">Заказать сейчас!</button>
+			</div>
+			<div class="col-xs-6 decoration-img">
+				<img src="img/preview/boxes.jpg" alt="" class="img-responsive">
+			</div>
+		</section>
+		<section class="row customer">
+			<h2>Как мы работаем</h2>
+			<div class="col-xs-12 col-md-4 customer-info">
+				<img src="img/icons/icon_first.png" alt="Первое преимущество" class="img-responsive">
+				<div class="customer-about">
+					<h3>Заказ</h3>
+					<div class="customer-text">
+						<p>Выберите кулон и подайте<br> заявку<br> или сделайте заказ по<br> телефону<br> <span class="telephone-number">+7(960)199-78-59</span></p>
+						<p>После оформления заказа<br> мы свяжемся с вами в<br> течении 15 минут для<br> уточнения деталей</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-md-4 customer-info">
+				<img src="img/icons/icon_second.png" alt="Второе преимущество" class="img-responsive">
+				<div class="customer-about">
+					<h3>Оплата</h3>
+					<div class="customer-text">
+						<p>После согласования деталей<br> заказа и желаемого способа<br>доставки, внесите оплату за<br>выбранный кулон</p>
+						<p>Реквизиты будут<br>предоставлены любым<br>удобным для вас способом</p>
+						<p>Отправка производится на<br>следующий день после<br>оплаты</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-md-4 customer-info">
+				<img src="img/icons/icon_third.png" alt="Третье преимущество" class="img-responsive">
+				<div class="customer-about">
+					<h3>Доставка</h3>
+					<div class="customer-text">
+						<p>Стоимость включает в себя<br>доставку почтой по России<br>Сроки доставки от 5 до 14<br>рабочих дней</p>
+						<p>Трек-номер для<br>отслеживания посылки так же<br>прилагаются в<br>сопроводительном письме.<br>За дополнительную плату<br>возможны другие варианты</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<footer>
+			<div class="copyright">
+				&copy; 2019 Herbarium Jewelry
+			</div>
+			<div class="contacts">
+				8(960)199-78-59<br>
+				<a href="#">herbarium.jewelry@yandex.ru</a>
+
+			</div>
+		</footer>
 
 </body>
 </html>
