--- a/index_card.html
+++ b/index_card.html
@@ -89,7 +89,7 @@
             			</div>
             			
             		</div>
-            		<button  class="order ">
+            		<button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal" class="order ">
             			Заказать!
             		</button>
             	</div>
@@ -195,7 +195,27 @@
 
 
 	<!-- Modal -->
+<!-- Modal -->
+    <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+        <div class="modal-content">
 
+       
+        <div class="modal-body">
+         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+
+
+
+<form action="send.php" method="post" class="orderform">
+
+Имя <br><input type="text" name="first_name"><br>
+
+Телефон: <br><input type="tel" name="tel"><br>
+
+Эл.почта:<br> <input type="text" name="email" required placeholder="Обязательное поле"><br>
+
+<input type="submit" name="submit" value="Submit">
+</form>
 
 
 
