--- a/index_carusel.html
+++ b/index_carusel.html
@@ -19,23 +19,33 @@
 
 <body class="container">
 
-<div class="order">
-	<a class="preorder-bigestbtn popup_button" href="#" rel="preorder_window" onClick='$("#order_model").val("No");'>Сделать предзаказ</a>
-</div>
 
-<div class="popup_bg"></div>
-	<div class="popup_window" id="preorder_window">
-		<div class="popup_window__title">Оформи предзаказ со скидкой 20%</div>
-			<div class="popup_window__content">
-				<form action="index1.php" method="post" id="order_form">
-					<input class="popup_window__input" type="text" name="name"  placeholder="Ваше имя" />
-					<input class="popup_window__input" type="text" name="phone"placeholder="Ваш телефон" />
-					<input class="popup_window__input" type="text" name="email" placeholder="Ваш e-mail" />
-					<input type="submit" class="btn_submit_form" value="Сделать предзаказ" />
-				</form>
-			</div>
-		</div>
+<button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal">
+  Заказать обратный звонок
+</button>
 
+
+<!-- Modal -->
+    <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+        <div class="modal-content">
+
+       
+        <div class="modal-body">
+         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+
+
+
+<form action="send.php" method="post" class="orderform">
+
+Имя <br><input type="text" name="first_name"><br>
+
+Телефон: <br><input type="tel" name="tel"><br>
+
+Эл.почта:<br> <input type="text" name="email" required placeholder="Обязательное поле"><br>
+
+<input type="submit" name="submit" value="Submit">
+</form>
 
 
 
@@ -44,6 +54,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Подключаем Bootstrap JS -->    
     <script src="bootstrap/js/bootstrap.min.js"></script>
+
+
 
 </body>
 </html>
